--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,7 @@
 #__next {
   height: 100%;
   width: 100%;
+  display: flex;
 }
 
 html,
@@ -26,7 +27,7 @@ a {
   text-decoration: none;
 }
 
-.container {
+/* .container {
   --tw-backdrop-blur: blur(4px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) brightness(120%)
     contrast(90%) grayscale(20%) hue-rotate(20deg) invert(5%) opacity(60%)
@@ -34,4 +35,4 @@ a {
   backdrop-filter: var(--tw-backdrop-blur) brightness(150%) contrast(80%)
     grayscale(10%) hue-rotate(20deg) invert(10%) opacity(60%) saturate(40%)
     sepia(70%);
-}
+} */
